<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fpoly.dell.project.ui.ThongKeActivity">



    <TextView
        android:layout_marginStart="15dp"
        android:id="@+id/tvThongKeNgay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/ngay_ThongKe"
        android:textSize="18sp"


        />

    <TextView
        android:id="@+id/tvThongKeThang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/thang_thongke"

        android:layout_marginStart="15dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvThongKeNam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/nam_thongke"

        android:layout_marginStart="15dp"
        android:textSize="18sp" />

</LinearLayout>
