<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.fpoly.dell.project.ui.ThemVatNuoiActivity">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="5">

                <EditText
                    android:id="@+id/ed_mavatnuoi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/MavatNUoi"
                    android:maxLength="5" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Spinner

                    android:id="@+id/sp_Vatnuoi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </Spinner>
            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="5">

                <EditText
                    android:id="@+id/ed_soluongvatnuoi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/soluong"
                    android:inputType="number"
                    android:maxLength="5" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="50">

                <EditText
                    android:id="@+id/ed_thucan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/thucan"
                    android:maxLength="50" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="50">

                <EditText
                    android:id="@+id/ed_suckhoe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/suckhoe"
                    android:maxLength="50" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">



                <Button
                    android:background="@drawable/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:onClick="Cancel"
                    android:text="@string/Cancel"
                    android:textAllCaps="false" />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:onClick="add"
                    android:text="@string/them"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>