<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.fpoly.dell.project.ui.HomeActivity">
    <LinearLayout
        android:layout_marginTop="25dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/chungloai"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView

                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/chungloai"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_qlchungloai"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/vatnuoi"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView

                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/vatnuoi"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_qlvatnuoi"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">


        <LinearLayout
            android:id="@+id/kinhnghiem"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView

                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/kinhnghiem"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_kinhnghiem"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/chiphi"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView

                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/chiphi"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_chiphi"
                android:textSize="18sp"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/thongke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView

                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/thongke" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_thongke"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>