<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.fpoly.dell.project.ui.ThemChungLoaiActivity">
    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                android:layout_marginTop="16dp">

                <EditText
                    android:maxLength="5"
                    android:id="@+id/edtMaChungLoai"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/maChungLoai"
                    android:imeActionId="6"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                android:layout_marginTop="16dp">

                <EditText
                    android:maxLength="50"
                    android:id="@+id/edtTenChungLoai"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tenChungLoai"
                    android:imeActionId="6"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                android:layout_marginTop="16dp">

                <EditText
                    android:maxLength="50"
                    android:id="@+id/edtViTriChuong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/viTriChuong"
                    android:imeActionId="6"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
android:background="@drawable/button"
                    android:id="@+id/btnHuy"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@string/Cancel"
                    android:textStyle="bold" />

                <Button
                    android:background="@drawable/button"
                    android:id="@+id/btnAdd"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@string/them"
                    android:textStyle="bold" />

            </LinearLayout>




        </LinearLayout>
    </ScrollView>

</LinearLayout>